force-app/main/default/objects/MQL_Qualification_Policy__mdt/MQL_Qualification_Policy__mdt.object-meta.xml
<CustomObject>
    <description>BR-17, PD-14. THE GOVERNED DEFINITION OF MQL. The active record states which requirements constitute MQL, which stage they govern, and the version stamped onto qualified records. Reading this one record answers "what is the MQL definition?" without reconstructing it from Flow branches, and both the Salesforce preventive safeguard and the future NorthstarIQ detective control consume THIS record rather than each holding a copy. NOT A RULES ENGINE: the requirement set is a fixed schema of named checkboxes - no expressions, no field names, no operators, no weights, no nested groups. Each flag declares that a requirement APPLIES; the requirement itself stays owned by the metadata that already governs it. Adding a requirement is a schema change, deliberately. CONVENTION: exactly one active record per governed stage, enforced by repository test. SYNTHETIC BASELINE - authored for reproducible demonstration, not a validated client requirement.</description>
    <label>MQL Qualification Policy</label>
    <pluralLabel>MQL Qualification Policies</pluralLabel>
</CustomObject>