force-app/main/default/objects/MQL_Qualification_Policy__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Whether this policy version is in force. Exactly one record is expected to be active.</description>
    <inlineHelpText>Whether this policy version is in force.</inlineHelpText>
    <label>Is Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>