force-app/main/default/objects/MQL_Qualification_Policy__mdt/fields/Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Policy_Version__c</fullName>
    <description>The version stamped into MQL_Basis__c on every Lead qualified under this policy, so a historical qualification stays interpretable after the definition changes.</description>
    <inlineHelpText>Version recorded on Leads qualified under this policy.</inlineHelpText>
    <label>Policy Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>