force-app/main/default/objects/MQL_Qualification_Policy__mdt/fields/Require_Governed_Source__c.field-meta.xml
<CustomField>
    <fullName>Require_Governed_Source__c</fullName>
    <description>QUALIFICATION ELIGIBILITY. Whether MQL requires the Lead Source to be one NorthstarIQ holds to a routing-readiness standard. The SET of governed sources is owned by Routing_Readiness_Source__mdt and is not restated here - this flag states only that the requirement applies to MQL.</description>
    <inlineHelpText>Require Governed Acquisition Source.</inlineHelpText>
    <label>Require Governed Acquisition Source</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>