force-app/main/default/objects/MQL_Qualification_Policy__mdt/fields/Require_MQL_Eligible_Segment__c.field-meta.xml
<CustomField>
    <fullName>Require_MQL_Eligible_Segment__c</fullName>
    <description>QUALIFICATION ELIGIBILITY. Whether MQL requires the derived segment to be one the business runs a seller-led motion for. WHICH segments qualify is owned by Segment_Band__mdt.MQL_Eligible__c and is not restated here.</description>
    <inlineHelpText>Require MQL-Eligible Segment.</inlineHelpText>
    <label>Require MQL-Eligible Segment</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>