force-app/main/default/objects/MQL_Qualification_Policy__mdt/fields/Require_Routable_Territory__c.field-meta.xml
<CustomField>
    <fullName>Require_Routable_Territory__c</fullName>
    <description>HANDOFF READINESS, not buyer quality. Whether MQL requires a resolved governed territory, so Sales is handed something with an actionable coverage path rather than a record bound for the routing exception queue. The country-to-territory map is owned by Routing_Rule__mdt.</description>
    <inlineHelpText>Require Resolved Governed Coverage.</inlineHelpText>
    <label>Require Resolved Governed Coverage</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>